@@ -190,4 +190,4 @@ def exists(env):
         return env.Detect('link')
     else:
         # there's at least one version of MSVS installed.
-        return True
+        return 1
